# app/backend/src/main/java/br/com/pucc/projetointegradorvi/models/dto/AccessDto.java
@@ -1,0 +1,24 @@
+package br.com.pucc.projetointegradorvi.models.dto;
+
+public class AccessDto {
+
+	private String login;
+	private String password;
+
+	public String getLogin() {
+		return login;
+	}
+
+	public void setLogin(String login) {
+		this.login = login;
+	}
+
+	public String getPassword() {
+		return password;
+	}
+
+	public void setPassword(String password) {
+		this.password = password;
+	}
+
+}
