# app/backend/src/main/resources/pi_vi_swagger.yaml
@@ -1,51 +1,78 @@
 openapi: 3.0.0
 info:
   title: PUCC - Projeto Integrador VI
-  description: API para gerenciamento de investimentos e portfólio.
+  description: API para gerenciamento de investimentos.
   version: 1.0.0
 servers:
-  - url: https://api.pucc-projeto-integrador-vi.com
-    description: Servidor de Produção
-
+  - url: http://localhost:8080/api
+    description: Servidor Local
+tags:
+  - name: Auths
+    description: Autenticação e Autorização de usuários
+  - name: Usuários
+    description: Operações referentes aos usuários
+  - name: Em definição
+    description: Recursos e campos em discussão
+security:
+  - basicAuth: []
 paths:
-  /login:
-    post:
+  /auth/login:
+    get:
+      tags: 
+        - Auths
       summary: Login de usuário
       description: Autenticar um usuário no sistema.
+      responses:
+        '200':
+          description: Login bem-sucedido
+          content:
+            text/plain:
+              schema:
+                type: string
+                description: User, Successfully logged in!
+                example: "User, Successfully logged in!"
+        '401':
+          description: Credenciais inválidas
+  /user:
+    post:
+      tags: 
+        - Usuários
+      summary: Cria um novo usuário
+      description: Adiciona um novo usuário ao sistema
       requestBody:
-        description: Credenciais do usuário.
+        description: Dados do usuário
         required: true
         content:
           application/json:
             schema:
               type: object
+              required:
+                - firstName
+                - lastName
+                - login
+                - password
               properties:
-                username:
+                firstName:
+                  type: string
+                lastName:
+                  type: string
+                login:
                   type: string
                 password:
                   type: string
-              required:
-                - username
-                - password
       responses:
-        '200':
-          description: Login bem-sucedido
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  token:
-                    type: string
+        '201':
+          description: Usuário adicionado com sucesso
+        '400':
+          description: Dados inválidos
         '401':
           description: Credenciais inválidas
-
   /portfolio:
     get:
+      tags: 
+        - Em definição
       summary: Obter portfólio de investimentos
       description: Retornar detalhes do portfólio do usuário, incluindo saldo, poder de compra, gráficos e ações.
-      security:
-        - bearerAuth: []
       responses:
         '200':
           description: Detalhes do portfólio retornados com sucesso
@@ -93,9 +120,10 @@ paths:
           description: Não autorizado
         '500':
           description: Erro no servidor
-
   /stocks/search:
     get:
+      tags: 
+        - Em definição
       summary: Buscar ações por nome ou símbolo
       description: Retornar lista de ações disponíveis para busca.
       parameters:
@@ -123,13 +151,12 @@ paths:
                       type: number
         '404':
           description: Nenhuma ação encontrada
-
   /investment:
     post:
+      tags: 
+        - Em definição
       summary: Adicionar novo investimento
       description: Adicionar uma nova ação ou ETF ao portfólio do usuário.
-      security:
-        - bearerAuth: []
       requestBody:
         description: Dados do investimento
         required: true
@@ -153,9 +180,10 @@ paths:
           description: Investimento adicionado com sucesso
         '400':
           description: Dados inválidos
-
   /stocks/{ticker}:
     get:
+      tags: 
+        - Em definição
       summary: Obter detalhes de uma ação
       description: Retornar detalhes sobre uma ação específica, incluindo preço, mudanças, gráficos, informações da empresa e estatísticas.
       parameters:
@@ -238,10 +266,8 @@ paths:
                           type: string
         '404':
           description: Ação não encontrada
-
 components:
   securitySchemes:
-    bearerAuth:
+    basicAuth:
       type: http
-      scheme: bearer
-      bearerFormat: JWT
+      scheme: basic
